contact about heaven done

--- a/css/common.css
+++ b/css/common.css
@@ -78,8 +78,6 @@ figure img {
 }
 
 body {
-    background: var(--main-color);
-
     font: 1.6rem/1.6 "Pretendard", sans-serif;
     word-break: keep-all;
 }
@@ -91,7 +89,6 @@ header {
     z-index: 100;
 
     width: 100%;
-    background: rgba(44, 255, 5, 0.7);
 
     transition: 0.25s;
 }
@@ -114,16 +111,6 @@ header nav {
     width: 7rem;
     height: 7rem;
     background: #000 url() 50% 50% / contain;
-}
-
-.btn-menu {
-    display: block;
-    width: 7rem;
-    height: 7rem;
-    padding: 2rem;
-
-    background: #000 url() 50% 50% / contain;
-    cursor: pointer;
 }
 
 footer {
@@ -160,13 +147,8 @@ footer .mode-wrap #mode + label {
     cursor: pointer;
 }
 
-footer .mode-wrap #mode + label span {
-    font-weight: 900;
-}
-
 footer .mode-wrap #mode + label span:first-child {
     font-family: "Roboto Condensed";
-    font-weight: 300;
     font-style: italic;
 }
 
@@ -180,19 +162,10 @@ footer .mode-wrap #mode + label::before {
 
     width: 8.5rem;
     height: 3.5rem;
-    background: linear-gradient(
-        120deg,
-        rgba(255, 255, 255, 1) 0%,
-        rgba(153, 153, 153, 1) 45%,
-        rgba(204, 204, 204, 1) 63%,
-        rgba(67, 67, 67, 1) 70%,
-        rgba(204, 204, 204, 1) 100%
-    );
 
     box-sizing: border-box;
     border: 2px solid rgba(255, 255, 255, 0.85);
     border-radius: 35px;
-    box-shadow: 1.5px 3px 4px rgba(0, 0, 0, 0.25);
 }
 
 footer .mode-wrap #mode + label::after {
@@ -200,162 +173,19 @@ footer .mode-wrap #mode + label::after {
 
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(50%, calc(-50% + 1.5px));
 
     width: 2.5rem;
     height: 2.5rem;
     border-radius: 50%;
 
-    background: var(--main-color) url() 50% 50% / contain;
-    box-shadow: -1.4px 0 1px var(--white20p), inset 2px 1.5px 2px var(--black60p), -0.7px 0.7px 2px 1px var(--white80p),
-        inset 3px 3.5px 8px 1.5px var(--black20p);
+    background: 50% 50% / contain;
 }
 
 footer .update {
     display: flex;
     gap: 20px;
-
-    color: #fff;
 }
 
 footer .update strong {
     font-weight: 700;
-}
-
-.mega-menu {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    z-index: 1000;
-
-    width: 100%;
-    height: 100vh;
-
-    background: var(--main-color);
-
-    transition: 0.4s;
-}
-
-.mega-menu.active {
-    right: 0;
-}
-
-#text-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-}
-
-.text-element {
-    position: absolute;
-}
-
-.text-element.logo a {
-    display: block;
-    width: 3.65vw; /* 7rem -> 3.65vw */
-    height: 3.65vw; /* 7rem -> 3.65vw */
-    background: #000 url() 50% 50% / contain;
-}
-
-.text-element.btn-close > button {
-    display: block;
-    width: 3.65vw; /* 7rem -> 3.65vw */
-    height: 3.65vw; /* 7rem -> 3.65vw */
-    padding: 1.04vw; /* 2rem -> 1.04vw */
-    background: #000 url() 50% 50% / contain;
-    cursor: pointer;
-}
-
-.text-element.menu a {
-    display: inline-block;
-    padding: 1.56vw 4.43vw; /* 3rem 8.5rem -> 1.56vw 4.43vw */
-    background: #fff;
-    border-radius: 14.4rem;
-    font-weight: 900;
-    font-size: 7.5vw; /* 14.4rem -> 7.5vw */
-    line-height: 1.2;
-    color: var(--title-color);
-    transition: 0.3s;
-}
-
-.text-element.menu:hover a {
-    color: #fff;
-    -webkit-text-stroke: 3px var(--main-color);
-
-    background: var(--point-color);
-}
-
-.text-element.project a {
-    color: var(--point-color);
-}
-
-.text-element.menu-projectsub a {
-    display: inline-block;
-    padding: 0.78vw 2.6vw; /* 1.5rem 5rem -> 0.78vw 2.6vw */
-    background: #fff;
-    border-radius: 10rem;
-
-    font-weight: 700;
-    font-size: 3.13vw; /* 6rem -> 3.13vw */
-    line-height: 1.2;
-    color: var(--main-color);
-
-    transition: 0.3s;
-}
-
-.text-element.menu-projectsub:hover a {
-    background: var(--main-color-dark);
-    color: #fff;
-}
-
-.text-element.line {
-    display: inline-block;
-    padding: 0.42vw 2.08vw; /* 0.8rem 4rem -> 0.42vw 2.08vw */
-    background: var(--white40p);
-    border: 3px solid #fff;
-    border-radius: 7rem;
-
-    font-weight: 900;
-    font-size: 1.46vw; /* 2.8rem -> 1.46vw */
-    color: #fff;
-}
-
-.text-element.line7 i {
-    font-weight: 700;
-    font-size: 1.04vw; /* 2rem -> 1.04vw */
-}
-
-.text-element.line9 i {
-    font-family: "Roboto Condensed";
-    font-style: italic;
-}
-
-.text-element.line-deco {
-    display: inline-block;
-    padding: 1.04vw 1.56vw; /* 2rem 3rem -> 1.04vw 1.56vw */
-    background: var(--point-color);
-    border-radius: 7rem;
-
-    line-height: 1.2;
-    color: #fff;
-}
-
-.text-element.line-deco.badge1 {
-    font-weight: 700;
-    font-size: 1.46vw; /* 2.8rem -> 1.46vw */
-}
-
-.text-element.line-deco.badge2 {
-    font-weight: 900;
-    font-size: 3.13vw; /* 6rem -> 3.13vw */
-}
-
-.text-element.line-deco.badge3 {
-    padding: 0.52vw 1.04vw; /* 1rem 2rem -> 0.52vw 1.04vw */
-
-    font-weight: 600;
 }
