--- a/css/heaven-contact.css
+++ b/css/heaven-contact.css
@@ -1,77 +1,34 @@
-@charset "utf-8";
-
-body {
-    height: 100vh;
-    overflow: hidden;
-}
-
-.marquee {
-    margin-top: 14rem;
-}
-
-.marquee .text1,
-.marquee .text2 {
-    display: flex;
-}
-
-.marquee .text1 p,
-.marquee .text2 p {
-    padding: 0 2.5rem;
-
-    font-weight: 700;
-    font-size: 9.6rem;
-    line-height: 1.2;
-    color: var(--point-color);
-    white-space: nowrap;
-
-    animation: marquee 4s linear infinite both;
-}
-
-.marquee .text2 p {
-    font-size: 12.8rem;
-}
-
-.marquee .contact {
-    display: flex;
-}
-
-.marquee .contact p {
-    padding: 0 2.5rem;
-    margin-right: -1px;
-    background: #000;
-
+.contact {
     font-weight: 700;
     font-size: 12.8rem;
     line-height: 1.2;
-    color: #fff;
-    white-space: nowrap;
+    color: var(--main-color);
+    -webkit-text-stroke: 2px var(--title-color);
+    text-align: center;
 
-    animation: marquee 5s linear infinite both;
-}
-
-@keyframes marquee {
-    100% {
-        transform: translateX(-100%);
-    }
+    margin-top: 25rem;
 }
 
 .info {
     display: flex;
     flex-direction: column;
-    /* gap: 5rem; */
+    gap: 5rem;
     justify-content: center;
     align-items: center;
 
-    margin-top: 5rem;
+    width: 159.6rem;
+    margin: 0 auto;
+    margin-top: 10rem;
 }
 
 .info li {
     position: relative;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
 
-    width: 70%;
+    width: 100%;
     padding: 2rem 3rem;
 
     border-bottom: 2px solid #000;
@@ -125,18 +82,17 @@ body {
 
 .info li i {
     position: absolute;
-    top: -1rem;
-    right: -3rem;
-    transform: rotate(10deg);
+    top: -2rem;
+    right: 0;
 
-    padding: 1rem 1.5rem;
+    padding: 0.7rem 1.5rem;
     background: var(--white50p);
-    border: 3px solid #fff;
+    border: 2px solid var(--main-color);
     border-radius: 5rem;
 
     font-weight: 700;
     font-size: 2rem;
-    color: var(--point-color);
+    color: var(--main-color-dark);
 
     display: none;
 }
