--- a/css/hell-projects.css
+++ b/css/hell-projects.css
@@ -47,7 +47,16 @@ h3 {
     width: 41.7rem;
     height: 47rem;
 
-    background: #fff;
+    background: var(--white30p);
+    box-shadow: inset 0 0 56px #fff;
+}
+
+.worklist .sticky figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    display: none;
 }
 
 .worklist .sticky .title {
@@ -99,7 +108,7 @@ h3 {
     height: 1.1rem;
     margin-left: -1rem;
 
-    background: url(../img/icon-arrow.png) no-repeat 50% 50% / contain;
+    background: url(../img/icon-arrow.svg) no-repeat 50% 50% / contain;
 
     visibility: hidden;
     opacity: 0;
@@ -142,7 +151,7 @@ h3 {
     border-bottom: 1px solid #000;
 
     cursor: pointer;
-    transition: 0.2s;
+    transition: 0.5s;
 }
 
 .worklist .sections ol li.active {
@@ -258,7 +267,7 @@ h3 {
     flex-shrink: 0;
     width: 3rem;
     height: 3rem;
-    background: url(../img/icon-close.png) no-repeat 50% 50% / contain;
+    background: url(../img/icon-close.svg) no-repeat 50% 50% / contain;
 }
 
 .listpopup .inner {
@@ -289,13 +298,20 @@ h3 {
 .listpopup figure {
     flex-shrink: 0;
     width: 100%;
-    height: 10000px;
     background: dodgerblue;
+}
+
+.listpopup figure img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+
+    display: none;
 }
 
 /* e:listpopup */
 
-.banner .main-swiper-wrapper {
+#banner .main-swiper-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -307,27 +323,30 @@ h3 {
     position: relative;
 }
 
-.banner .main-swiper-wrapper .main-swiper {
+#banner .main-swiper-wrapper .main-swiper {
     width: 144rem;
 }
 
-.banner .main-swiper-wrapper .main-swiper .swiper-slide {
+#banner .main-swiper-wrapper .main-swiper .swiper-slide {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
 }
-.banner .main-swiper-wrapper .main-swiper .swiper-slide a {
+#banner .main-swiper-wrapper .main-swiper .swiper-slide figure {
     display: block;
     width: 34.5rem;
     height: 34.5rem;
+
+    cursor: pointer;
 }
-.banner .main-swiper-wrapper .main-swiper .swiper-slide a img {
+#banner .main-swiper-wrapper .main-swiper .swiper-slide figure img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     background: var(--black50p);
 }
 
-.banner .main-swiper-wrapper .swiper-scrollbar.swiper-scrollbar-horizontal {
+#banner .main-swiper-wrapper .swiper-scrollbar.swiper-scrollbar-horizontal {
     bottom: 3.5rem;
     left: calc((100% - 1440px) / 2);
     width: 144rem;
@@ -335,13 +354,13 @@ h3 {
 
 /* e: banner-main swiper */
 
-.banner {
+#banner {
     position: relative;
 
     margin-top: 15rem;
 }
 
-.banner .sub-swiper-wrapper {
+#banner .sub-swiper-wrapper {
     position: absolute;
     top: 57%;
     left: 50%;
@@ -349,7 +368,7 @@ h3 {
     z-index: 99;
 
     width: 65%;
-    height: 65rem;
+    height: 75rem;
     padding: 8rem;
     padding-bottom: 5rem;
     background: var(--white70p);
@@ -357,32 +376,36 @@ h3 {
     backdrop-filter: blur(var(--glass-blur));
     border: 2px solid #fff;
     border-radius: 16px;
+
+    display: none;
 }
 
-.banner .sub-swiper-wrapper .btn-close {
+#banner .sub-swiper-wrapper .btn-close {
     position: absolute;
     top: 3rem;
     right: 5rem;
 
     width: 3rem;
     height: 3rem;
-    background: url(../img/icon-close.png) no-repeat 50% 50% / contain;
+    background: url(../img/icon-close.svg) no-repeat 50% 50% / contain;
     filter: brightness(0) invert(1);
+
+    cursor: pointer;
 }
 
-.banner .sub-swiper-wrapper .sub-swiper {
+#banner .sub-swiper-wrapper .sub-swiper {
     width: 100%;
     height: 100%;
     /* border: 1px solid dodgerblue; */
 }
 
-.banner .sub-swiper-wrapper .sub-swiper .swiper-slide {
+#banner .sub-swiper-wrapper .sub-swiper .swiper-slide {
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
 }
 
-.banner .sub-swiper-wrapper .sub-swiper .swiper-slide figure {
+#banner .sub-swiper-wrapper .sub-swiper .swiper-slide figure {
     display: flex;
     width: 100%;
     height: calc(100% - 47px);
@@ -392,19 +415,18 @@ h3 {
     /* border: 1px solid orange; */
 }
 
-.banner .sub-swiper img {
+#banner .sub-swiper img {
     width: 100%;
     height: 100%;
     object-fit: contain;
-    background: #000;
 }
 
-.banner .sub-swiper-wrapper .sub-swiper .swiper-slide .tags {
+#banner .sub-swiper-wrapper .sub-swiper .swiper-slide .tags {
     display: flex;
     gap: 1.5rem;
 }
 
-.banner .sub-swiper-wrapper .sub-swiper .swiper-slide .tags p {
+#banner .sub-swiper-wrapper .sub-swiper .swiper-slide .tags p {
     padding: 0.5rem 1.5rem;
     background: #fff;
     border-radius: 3.2rem;
@@ -412,51 +434,79 @@ h3 {
     color: var(--text-color);
 }
 
+#banner .sub-swiper-wrapper .btn-prev {
+    position: absolute;
+    top: 50%;
+    left: 2rem;
+    transform: translateY(-50%) scaleX(-1);
+
+    width: 3rem;
+    height: 5rem;
+    background: url(../img/icon-arrow.svg) no-repeat 50% 50% / contain;
+    filter: brightness(0) invert(1);
+
+    cursor: pointer;
+}
+
+#banner .sub-swiper-wrapper .btn-next {
+    position: absolute;
+    top: 50%;
+    right: 2rem;
+    transform: translateY(-50%);
+
+    width: 3rem;
+    height: 5rem;
+    background: url(../img/icon-arrow.svg) no-repeat 50% 50% / contain;
+    filter: brightness(0) invert(1);
+
+    cursor: pointer;
+}
+
 /* e: banner */
 
-.other {
+#other {
     margin: 15rem 0;
 }
 
-.other .text {
+#other .text {
     padding: 2rem 5rem;
 }
 
-.other .text p {
+#other .text p {
     font-size: 2rem;
     color: var(--text-color);
     text-align: end;
 }
 
-.other .text p + p {
+#other .text p + p {
     font-size: 1.6rem;
 }
 
-.other .text p + p i {
+#other .text p + p i {
     font-weight: 700;
 }
 
-.other .other-swiper-wrapper {
+#other .other-swiper-wrapper {
     display: flex;
     justify-content: center;
 
     margin-top: 5rem;
 }
 
-.other .other-swiper-wrapper .other-swiper {
+#other .other-swiper-wrapper .other-swiper {
     width: 220rem;
     overflow: visible;
 }
 
-.other .other-swiper-wrapper .other-swiper .swiper-wrapper {
+#other .other-swiper-wrapper .other-swiper .swiper-wrapper {
     transition-timing-function: linear;
 }
 
-.other .other-swiper-wrapper .other-swiper .swiper-wrapper .swiper-slide {
+#other .other-swiper-wrapper .other-swiper .swiper-wrapper .swiper-slide {
     aspect-ratio: 1;
 }
 
-.other .other-swiper-wrapper .other-swiper .swiper-wrapper .swiper-slide img {
+#other .other-swiper-wrapper .other-swiper .swiper-wrapper .swiper-slide img {
     width: 100%;
     height: 100%;
     object-fit: contain;
