--- a/css/heaven-heejoo.css
+++ b/css/heaven-heejoo.css
@@ -3,9 +3,9 @@
 .sec-list {
     display: flex;
     width: 100%;
-    height: calc(100vh - 19rem);
+    height: 100vh;
     gap: 2rem;
-    margin-top: 13rem;
+    padding: 14rem 0 7rem;
 }
 
 .list1 {
@@ -216,7 +216,7 @@ h3::before {
     content: "";
 
     position: absolute;
-    top: 50.5%;
+    top: 50.7%;
     left: 4rem;
 
     display: block;
@@ -233,7 +233,7 @@ h3::before {
     content: "";
 
     position: absolute;
-    top: 53%;
+    top: 53.2%;
     left: 60%;
 
     display: block;
@@ -247,7 +247,7 @@ h3::before {
     content: "";
 
     position: absolute;
-    top: 52%;
+    top: 52.3%;
     right: 5rem;
 
     display: block;
