--- a/css/heaven-main before.css
+++ b/css/heaven-main before.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 
-.grid-wrap {
+.title-wrap,
+.popup {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
     grid-template-rows: 2fr 2fr 1.5fr;
@@ -14,42 +15,40 @@
     padding: 12rem 0 5rem;
 }
 
-.grid-wrap .portfolio {
+.title-wrap .portfolio,
+.popup .portfolio {
     grid-area: portfolio;
 }
-
-.grid-wrap .mode {
+.title-wrap .mode,
+.popup .mode {
     grid-area: mode;
 }
-
-.grid-wrap .heejoo {
+.title-wrap .heejoo,
+.popup .heejoo {
     grid-area: heejoo;
 }
-
-.grid-wrap .process {
+.title-wrap .process,
+.popup .process {
     grid-area: process;
 }
-
-.grid-wrap .wandoo {
+.title-wrap .wandoo,
+.popup .wandoo {
     grid-area: wandoo;
 }
 
 /* e: grid */
 
-.grid-wrap section {
-    position: relative;
-}
-
-.grid-wrap h2 {
+.title-wrap {
     position: absolute;
     top: 0;
     left: 0;
+    /* display: none; */
+}
 
+.title-wrap strong {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
     background: #fff;
 
     border: 3px solid var(--main-color);
@@ -64,36 +63,47 @@
     box-shadow: inset 4px 4px 4px var(--white20p);
     backdrop-filter: blur(2.5px);
 
-    cursor: pointer;
     transition: 0.8s;
 }
 
-.grid-wrap h2:hover {
+.title-wrap strong:hover {
     color: #000;
+    /* text-shadow: 0 4px 8px var(--black30p); */
 
     background-color: var(--white50p);
 }
 
-/* e: h2 */
+.title-wrap strong.hide {
+    opacity: 0;
+    pointer-events: none;
+}
 
-.grid-wrap .behind {
+.title-wrap strong.hide.process {
+    /* user-select: none;
+    pointer-events: none; */
+}
+
+/* e: title-wrap */
+
+.popup h2 {
+    display: none;
+}
+
+.popup section {
     display: flex;
     justify-content: center;
     align-items: center;
-
-    width: 100%;
-    height: 100%;
     background: #fff;
 
     border: 3px solid var(--main-color);
 }
 
-.grid-wrap .behind dl {
+.popup dl {
     display: flex;
     gap: 1rem;
 }
 
-.grid-wrap .behind dl dt {
+.popup dl dt {
     width: 20rem;
     font-weight: 700;
     font-size: 4.4rem;
@@ -102,7 +112,7 @@
     paint-order: stroke fill;
 }
 
-.grid-wrap .behind dl dd {
+.popup dl dd {
     font-weight: 700;
     font-size: 2.8rem;
     color: var(--title-color);
@@ -110,29 +120,19 @@
     margin-top: 2rem;
 }
 
-/* e: behind 공통설정 */
-
-.grid-wrap .portfolio .behind {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-
-    padding: 0 12rem;
-}
-
-.grid-wrap .portfolio .behind dl dd {
+.popup .portfolio dl dd {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.grid-wrap .portfolio .behind dl dd p {
+.popup .portfolio dl dd p {
     display: flex;
     align-items: center;
     gap: 2rem;
 }
 
-.grid-wrap .portfolio .behind dl dd p::before {
+.popup .portfolio dl dd p::before {
     content: "";
 
     display: block;
@@ -141,32 +141,38 @@
     background: orange;
 }
 
-.grid-wrap .mode .behind dl dt {
+/* e: popup 공통설정 */
+
+.popup .mode dl dt {
     width: 24rem;
 }
-
-.grid-wrap .mode .behind dl dd {
-    font-size: 2.4rem;
-    margin-top: 0;
+.popup .process dl dt {
+    width: 30rem;
 }
 
-.grid-wrap .process .behind a {
+.popup .process a {
     display: flex;
     justify-content: center;
     align-items: center;
 
     width: 100%;
     height: 100%;
+    background: cadetblue;
+
+    cursor: pointer;
 }
 
-.grid-wrap .process .behind dl dt {
-    width: 30rem;
+.popup .mode dl dd {
+    font-size: 2.4rem;
+    margin-top: 0;
 }
 
-.grid-wrap .heejoo .behind {
+.popup .heejoo .popup-text.heaven {
+    display: flex;
+    flex-wrap: wrap;
     gap: 5rem;
 }
 
-.grid-wrap .heejoo .behind .left dl dt {
+.popup .heejoo .popup-text.heaven .left dl dt {
     width: 17rem;
 }
