--- a/css/heaven-common.css
+++ b/css/heaven-common.css
@@ -66,7 +66,8 @@ footer .mode-wrap #mode + label::after {
     transform: translate(-20%, -50%);
 
     background-color: #fff;
-    background-image: url();
+    background-image: url(../img/heaven-icon-toggle.svg);
+    background-size: 75%;
     box-shadow: 0 0 40px rgba(0, 255, 4, 1), 0 0 30px rgba(0, 255, 4, 0.7), 0 0 20px rgba(167, 255, 169, 0.7),
         0 0 8px rgba(225, 225, 225, 0.4);
 }
