--- a/css/projects.css
+++ b/css/projects.css
@@ -80,7 +80,7 @@ h2.hell-only {
     align-items: center;
     flex: 1 0;
     padding: 1.2rem 3rem;
-    gap: 0.5rem;
+    gap: 0.7rem;
 
     background: #fff;
     box-shadow: var(--button-box-shadow2);
@@ -95,10 +95,17 @@ h2.hell-only {
 .hell-only .works-wrap .sticky .buttons *::before {
     content: "";
 
-    width: 2rem;
-    height: 2rem;
+    width: 1.6rem;
+    height: 1.6rem;
 
-    background: #000;
+    background: no-repeat 50% 50% / contain;
+}
+
+.hell-only .works-wrap .sticky .buttons *:nth-child(1):before {
+    background-image: url(../img/icon-process.svg);
+}
+.hell-only .works-wrap .sticky .buttons *:nth-child(2):before {
+    background-image: url(../img/icon-website.svg);
 }
 
 .hell-only .works-wrap .sticky .buttons *::after {
@@ -652,7 +659,7 @@ body.heaven h3::after {
     align-items: center;
     flex: 1 0;
     padding: 1.2rem 3rem;
-    gap: 0.5rem;
+    gap: 0.7rem;
 
     background: #fff;
     box-shadow: var(--button-box-shadow1), var(--button-box-shadow2);
@@ -667,10 +674,17 @@ body.heaven h3::after {
 .heaven-only .buttons *::before {
     content: "";
 
-    width: 2rem;
-    height: 2rem;
+    width: 1.6rem;
+    height: 1.6rem;
 
-    background: #000;
+    background: no-repeat 50% 50% / contain;
+}
+
+.heaven-only .buttons *:nth-child(1):before {
+    background-image: url(../img/icon-process.svg);
+}
+.heaven-only .buttons *:nth-child(2):before {
+    background-image: url(../img/icon-website.svg);
 }
 
 .heaven-only .buttons *::after {
