--- a/css/heejoo.css
+++ b/css/heejoo.css
@@ -416,6 +416,11 @@ footer.hell .mode-wrap #mode + label {
     grid-area: portrait;
 }
 
+.hell-only .popup-list .about .portrait figure {
+    width: 100%;
+    height: 100%;
+}
+
 .hell-only .popup-list .about .strength1 {
     grid-area: strength1;
     font-size: 2.8rem;
@@ -731,15 +736,12 @@ footer.hell .mode-wrap #mode + label {
 
 .heaven-only .list1 figure {
     width: 100%;
-    height: 35rem;
+    height: 33rem;
     padding: 3rem;
 }
 
 .heaven-only .list1 figure img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background: orange;
+    border-radius: 32px;
 }
 
 .heaven-only .list1 ul::before {
