--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,14 @@ body.hell {
 .hell-only .name-marquee .joo {
     display: flex;
     width: fit-content;
-    height: 392px;
+    height: 19.2708vw;
     align-items: center;
     overflow: hidden;
 
     font-family: "Roboto Condensed";
     font-weight: 900;
     font-style: italic;
-    font-size: 43rem;
+    font-size: 22.3958vw;
     line-height: 0.85;
     letter-spacing: -10px;
     color: var(--main-color);
@@ -262,8 +262,13 @@ body.hell {
 }
 
 .hell-only .popup .wandoo {
-    top: 25%;
-    right: 27%;
+    top: 32%;
+    right: 20%;
+}
+
+.hell-only .popup .wandoo figure {
+    width: 35rem;
+    height: 45rem;
 }
 
 /* e: popup 개별 위치 설정 */
@@ -372,6 +377,7 @@ body.hell {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 10;
 
     display: flex;
     justify-content: center;
@@ -404,48 +410,6 @@ body.hell {
 
 .heaven-only .grid-wrap .portfolio {
     overflow: hidden;
-}
-
-.heaven-only .grid-wrap .portfolio h2::before {
-    content: "";
-    position: absolute;
-    top: 0%;
-    left: -30%;
-    transform: rotate(90deg);
-    z-index: -1;
-
-    width: 80rem;
-    height: 14rem;
-
-    filter: blur(8px);
-
-    background: url(../img/deco-worm.svg) no-repeat 0 0 / contain;
-
-    animation: rotateY 3s infinite both;
-}
-
-.heaven-only .grid-wrap .portfolio h2::after {
-    content: "";
-    position: absolute;
-    bottom: -5%;
-    left: 35%;
-    transform: rotate(90deg);
-    z-index: -1;
-
-    width: 18rem;
-    height: 18rem;
-
-    filter: blur(8px);
-
-    background: url(../img/deco-softflower.svg) no-repeat 0 0 / contain;
-
-    animation: rotateY 8s infinite both;
-}
-
-@keyframes rotateY {
-    100% {
-        transform: rotate(90deg) rotateX(360deg);
-    }
 }
 
 .heaven-only .grid-wrap .behind {
@@ -510,7 +474,32 @@ body.hell {
     display: block;
     width: 3rem;
     height: 3rem;
-    background: orange;
+    background: no-repeat 50% 50% / contain;
+
+    border-radius: 4px;
+    box-shadow: 0 4px 4px var(--black30p);
+}
+
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(1)::before {
+    background-image: url(../img/icon-skills-figma.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(2)::before {
+    background-image: url(../img/icon-skills-html.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(3)::before {
+    background-image: url(../img/icon-skills-css.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(4)::before {
+    background-image: url(../img/icon-skills-js.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(5)::before {
+    background-image: url(../img/icon-skills-jquery.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(6)::before {
+    background-image: url(../img/icon-skills-photoshop.jpg);
+}
+.heaven-only .grid-wrap .portfolio .behind dl dd p:nth-child(7)::before {
+    background-image: url(../img/icon-skills-illustrator.jpg);
 }
 
 .heaven-only .grid-wrap .mode .behind dl dt {
@@ -533,6 +522,68 @@ body.hell {
 
 .heaven-only .grid-wrap .process .behind dl dt {
     width: 30rem;
+}
+
+.heaven-only .grid-wrap .process .behind dl dd {
+    position: relative;
+}
+
+.heaven-only .grid-wrap .process .behind dl dd::before {
+    content: "";
+
+    position: absolute;
+    bottom: -10%;
+    right: -5%;
+
+    display: block;
+    border-top: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 0px solid var(--point-color);
+
+    animation: tri-ani 1.5s infinite both;
+}
+
+.heaven-only .grid-wrap .process .behind dl dd::after {
+    content: "";
+
+    display: block;
+    width: 0%;
+    height: 3px;
+
+    border-radius: 3px;
+    background: var(--point-color);
+
+    animation: line-ani 1.5s infinite both;
+}
+
+.heaven-only .grid-wrap .wandoo .behind figure {
+    width: 100%;
+    height: 100%;
+}
+
+@keyframes line-ani {
+    80% {
+        width: 100%;
+    }
+
+    100% {
+        width: 100%;
+    }
+}
+
+@keyframes tri-ani {
+    60% {
+        border-left: 0;
+    }
+
+    80% {
+        border-left: 10px solid var(--point-color);
+    }
+
+    100% {
+        border-left: 10px solid var(--point-color);
+    }
 }
 
 .heaven-only .grid-wrap .heejoo .behind {
