--- a/css/projects.css
+++ b/css/projects.css
@@ -1050,10 +1050,13 @@ body.heaven h3::after {
 }
 #banner.heaven .main-swiper-wrapper .main-swiper .swiper-slide figure {
     display: block;
-    width: 34.5rem;
-    height: 34.5rem;
+    width: calc((100% - 6rem) / 4);
+    aspect-ratio: 1;
     background: var(--main-color-dark);
     box-shadow: inset 0 0 32px var(--white90p);
+
+    border-radius: 16px;
+    overflow: hidden;
 
     cursor: pointer;
 }
@@ -1078,8 +1081,9 @@ body.heaven h3::after {
 
 #banner.heaven .main-swiper-wrapper .swiper-scrollbar.swiper-scrollbar-horizontal {
     bottom: 3.5rem;
-    left: calc((100% - 1440px) / 2);
-    width: 144rem;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
 }
 
 /* e: banner-main swiper */
@@ -1092,13 +1096,13 @@ body.heaven h3::after {
 
 #banner.heaven .sub-swiper-wrapper {
     position: absolute;
-    top: 65%;
+    top: 62%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 99;
 
     width: 65%;
-    height: 75rem;
+    height: 38vw;
     padding: 8rem;
     padding-bottom: 5rem;
     background: var(--white70p);
